# stutools

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.sat  Dockerfile.stush  INSTALL  Makefile  README.md  install-deps.sh
.github/workflows/: ccpp.yml
blockdevdiff/: Makefile  README.md  blockdevdiff.c  blockdevreplay.c
iotests/: CMakeLists.txt  Makefile  Makefile.old  aioExample.c  aioMulti.c  aioOperations.c  aioOperations.h  aioRWTest.c  aioReadTest.c  aioReads.c  aioReads.h  aioRequests.c  aioRequests.h  blockVerify.c  blockVerify.h  checkDisks.c  cigar.c  cigar.h  cigarTest.c  deviceTimeout.c  devices.c  devices.h  diskStats.c  diskStats.h  flipBits.c  flushBulk.c  flushTestReader.c  flushTestWriter.c  flushTester.c  gnustub  indiDisks.c  logSpeed.c  logSpeed.h  logSpeedTest.c  mtReadSpeedTest.c  mtWriteSpeedTest.c  offTheEnds.c  positionIterator.c  positionIterator.h  positions.c  (+19 more)
iotests/scripts/: bench.sh  machineinfo.sh  randomread.cli  randomrw.cli  randomwrite.cli  seqread.cli  seqwrite.cli  standard_tests.cli
packaging/: stutools.spec
report/: CMakeLists.txt  spitreport.c
spit/: CMakeCache.txt  CMakeLists.txt  COMPILE.md  IOPSvsLatency.gnu  Makefile  NetworkTesting.md  OSX.md  WINDOWS.md  advertise-mc.c  advertise-mc.h  aioExample.c  aioMulti.c  aioRWTest.c  aioRequests.c  aioRequests.h  asciihist.c  auth.c  auth.h  bdinfo.c  blockVerify-new.c  blockVerify.c  blockVerify.h  blockdevice.c  blockdevice.h  blockdeviceMain.c  blockdevices.c  blockdevices.h  blockdevicesMain.c  broadcastwatch.c  bv2.c  c.c  checkDisks.c  cidr.c  cigar.c  cigarTest.c  cluster.c  cluster.h  clusterMain.c  clustername.c  cmake_install.cmake  (+199 more)
spit/TOTP-MCU/: TOTP.c  TOTP.h  sha1.c  sha1.h
spit/scripts/: IOPS-rounds.sh  blockSize-vs-IOPS.sh  ss-gen-iops.sh  ss-plot-iops-mp.sh  ss-plot-iops.sh
spit/tpmtotp/: base32.c
utils/: CMakeLists.txt  Version.cmake  code-format  combo.c  deviceProbs.c  deviceProbs.h  dist.c  dl.c  median.c  mkspitcommand.c  raidfailures.c  raidsimulation.c  ramtester.c  stripesim.c
